# doc_redlines

./: .dialyzer_ignore.exs  .gitignore  .tool-versions  CHANGELOG.md  CHANGES.md  README.md  checksum-Elixir.DocRedlines.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs
lib/: doc_redlines.ex
lib/doc_redlines/: native.ex
native/doc_redlines_nif/: Cargo.toml  Cross.toml
native/doc_redlines_nif/src/: combine.rs  doc_parser.rs  dttm.rs  lib.rs  model.rs  normalize.rs  pipeline.rs  splitter.rs  sprm.rs
test/: doc_redlines_test.exs
test/fixtures/: sample.doc
