[package]
name = "doc_redlines_nif"
version = "0.5.0"
edition = "2024"

[lib]
name = "doc_redlines_nif"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
cfb = "0.10"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rustler = "0.37.1"

[dev-dependencies]
pretty_assertions = "1"
